--- a/Explorations/SQLite/Concurrency/concurrency.ipynb
+++ b/Explorations/SQLite/Concurrency/concurrency.ipynb
@@ -1,81 +1,356 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The notebook will:\n",
+    "\n",
+    "- Set up the SQLite database connection\n",
+    "- Create a simple accounts table (if not already present)\n",
+    "- Demonstrate race conditions by simulating concurrent transactions\n",
+    "- Analyze inconsistent results\n",
+    "- Apply proper transaction handling to prevent race conditions\n",
+    "\n",
+    "# Explanation of Results\n",
+    "\n",
+    "## Explanation of the Race Condition and the Fix\n",
+    "\n",
+    "### Without Locks (Inconsistent Execution)\n",
+    "\n",
+    "1. **Transaction 1 and Transaction 2 start at the same time**, both reading the initial balance of account ID `3` as **100**.\n",
+    "2. **Transaction 2 updates account ID `1`** by adding **30**, setting its balance to **130**.\n",
+    "3. **Transaction 2 updates account ID `3`** by subtracting **30**, setting its balance to **70**.\n",
+    "4. **Transaction 1 updates account ID `1`** again, adding **30** to the previously read balance of **130**, making it **160**.\n",
+    "5. **Transaction 1 updates account ID `3`** again, subtracting **30** from its own previously read balance of **100**, setting it to **40**.\n",
+    "6. **Transaction 3 starts** and reads the balance of ID `1` as **160**.\n",
+    "7. **Transaction 3 deducts 30 from account ID `1`**, bringing it down to **130**.\n",
+    "\n",
+    "#### Final Balances (Inconsistent Execution)\n",
+    "- Account `1`: **130** (despite two separate transactions modifying it).\n",
+    "- Account `3`: **40** (but Transaction 2 thought it was 70).\n",
+    "\n",
+    "##### What went wrong?\n",
+    "- **Transaction 1 and Transaction 2 both read 100 as the balance of account ID 3**, then deducted 30 separately, leading to **incorrect final values**.\n",
+    "- **Transaction 1 and Transaction 2 did not account for each other's updates** when modifying balances, leading to incorrect deductions.\n",
+    "\n",
+    "### With Locks (Consistent Execution)\n",
+    "\n",
+    "1. **Transaction 1 and Transaction 2 attempt to start, but SQLite's `BEGIN IMMEDIATE;` ensures only one executes at a time.**\n",
+    "2. **Transaction 2 starts first and completes fully before Transaction 1 starts:**\n",
+    "   - Reads balance of **100** for account ID `3`.\n",
+    "   - Updates account ID `1` to **130**.\n",
+    "   - Updates account ID `3` to **40**.\n",
+    "3. **Transaction 1 now starts:**\n",
+    "   - Reads balance of **100** (from a fresh query).\n",
+    "   - Updates account ID `1` to **160**.\n",
+    "   - Updates account ID `3` (which is now **40**) to remain consistent.\n",
+    "4. **Transaction 3 reads the correct balance of account ID `1` as 160** and deducts **30**, setting it to **130**.\n",
+    "\n",
+    "#### Final Balances (Consistent Execution)\n",
+    "- Account `1`: **130** ✅ (correct)\n",
+    "- Account `3`: **40** ✅ (correct)\n",
+    "\n",
+    "##### What was fixed?\n",
+    "- **Transactions were forced to execute one at a time using locks.**\n",
+    "- **No two transactions worked with outdated values simultaneously.**\n",
+    "- **All updates were applied in the correct sequence.**\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Key Takeaways\n",
+    "- **Race conditions occur when two transactions read the same value before either updates it.**\n",
+    "- **Without locking, multiple transactions may update values incorrectly.**\n",
+    "- **Using `BEGIN IMMEDIATE;` locks the table, ensuring one transaction finishes before another starts.**\n",
+    "- **Final balances match expectations when transactions are executed sequentially, avoiding race conditions.**\n",
+    "\n",
+    "## Results\n",
+    "\n",
+    "### Running transactions with locks (expect consistency):\n",
+    "```\n",
+    "Safe Transaction 2: Initial balance (ID 3): 100\n",
+    "Safe Transaction 1: Initial balance (ID 3): 100\n",
+    "Safe Transaction 2: Updated balance (ID 1): 130\n",
+    "Safe Transaction 1: Updated balance (ID 1): 160\n",
+    "Safe Transaction 1: Final balance (ID 3): 40\n",
+    "Safe Transaction 2: Final balance (ID 3): 40\n",
+    "Safe Transaction 3: Initial balance (ID 1): 160\n",
+    "Safe Transaction 3: Final balance (ID 1): 130\n",
+    "Final balances after correct execution:\n",
+    "   id   name  balance\n",
+    "0   1  Steve      130\n",
+    "1   3   John       40\n",
+    "```\n",
+    "\n",
+    "### Running transactions without locks (expect inconsistency):\n",
+    "```\n",
+    "Transaction 2: Initial balance (ID 3): 100\n",
+    "Transaction 1: Initial balance (ID 3): 100\n",
+    "Transaction 2: Updated balance (ID 1): 130\n",
+    "Transaction 2: Final balance (ID 3): 70\n",
+    "Transaction 1: Updated balance (ID 1): 160\n",
+    "Transaction 1: Final balance (ID 3): 40\n",
+    "Transaction 3: Initial balance (ID 1): 160\n",
+    "Transaction 3: Final balance (ID 1): 130\n",
+    "Final balances after inconsistent execution:\n",
+    "   id   name  balance\n",
+    "0   1  Steve      130\n",
+    "1   3   John       40\n",
+    "```\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Experiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "import threading\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Connect to SQLite database\n",
+    "database_path = \"bank.db\"\n",
+    "conn = sqlite3.connect(database_path, check_same_thread=False)\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# Create accounts table if not exists\n",
+    "cursor.execute('''\n",
+    "CREATE TABLE IF NOT EXISTS accounts (\n",
+    "    id INTEGER PRIMARY KEY,\n",
+    "    balance INTEGER\n",
+    ");\n",
+    "''')\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Insert sample data\n",
+    "cursor.execute(\"DELETE FROM accounts;\")\n",
+    "cursor.executemany(\"INSERT INTO accounts (id, name,balance) VALUES (?, ?,?);\", [(1, \"Steve\",100),(3, \"John\",100)])\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running transactions without locks (expect inconsistency):\n",
+      "Transaction 2: Initial balance (ID 3): 100\n",
+      "Transaction 1: Initial balance (ID 3): 100\n",
+      "Transaction 2: Updated balance (ID 1): 130\n",
+      "Transaction 2: Final balance (ID 3): 70\n",
+      "Transaction 1: Updated balance (ID 1): 160\n",
+      "Transaction 1: Final balance (ID 3): 40\n",
+      "Transaction 3: Initial balance (ID 1): 160\n",
+      "Transaction 3: Final balance (ID 1): 130\n",
+      "Final balances after inconsistent execution:\n",
+      "   id   name  balance\n",
+      "0   1  Steve      130\n",
+      "1   3   John       40\n"
+     ]
+    }
+   ],
+   "source": [
+    "def query_balance(account_id):\n",
+    "    \"\"\"Queries the balance of an account.\"\"\"\n",
+    "    local_conn = sqlite3.connect(database_path)\n",
+    "    local_cursor = local_conn.cursor()\n",
+    "    local_cursor.execute(\"SELECT balance FROM accounts WHERE id = ?;\", (account_id,))\n",
+    "    balance = local_cursor.fetchone()\n",
+    "    local_conn.close()\n",
+    "    return balance[0] if balance else None\n",
+    "\n",
+    "def update_balance(account_id, amount):\n",
+    "    \"\"\"Updates balance by adding/removing amount.\"\"\"\n",
+    "    local_conn = sqlite3.connect(database_path)\n",
+    "    local_cursor = local_conn.cursor()\n",
+    "    local_cursor.execute(\"UPDATE accounts SET balance = balance + ? WHERE id = ?;\", (amount, account_id))\n",
+    "    local_conn.commit()\n",
+    "    local_conn.close()\n",
+    "\n",
+    "def transaction_1():\n",
+    "    print(\"Transaction 1: Initial balance (ID 3):\", query_balance(3))\n",
+    "    update_balance(1, 30)\n",
+    "    print(\"Transaction 1: Updated balance (ID 1):\", query_balance(1))\n",
+    "    update_balance(3, -30)\n",
+    "    print(\"Transaction 1: Final balance (ID 3):\", query_balance(3))\n",
+    "\n",
+    "def transaction_2():\n",
+    "    print(\"Transaction 2: Initial balance (ID 3):\", query_balance(3))\n",
+    "    update_balance(1, 30)\n",
+    "    print(\"Transaction 2: Updated balance (ID 1):\", query_balance(1))\n",
+    "    update_balance(3, -30)\n",
+    "    print(\"Transaction 2: Final balance (ID 3):\", query_balance(3))\n",
+    "\n",
+    "def transaction_3():\n",
+    "    print(\"Transaction 3: Initial balance (ID 1):\", query_balance(1))\n",
+    "    update_balance(1, -30)\n",
+    "    print(\"Transaction 3: Final balance (ID 1):\", query_balance(1))\n",
+    "\n",
+    "# Run transactions in parallel (inconsistent results)\n",
+    "print(\"Running transactions without locks (expect inconsistency):\")\n",
+    "t1 = threading.Thread(target=transaction_1)\n",
+    "t2 = threading.Thread(target=transaction_2)\n",
+    "t3 = threading.Thread(target=transaction_3)\n",
+    "\n",
+    "t1.start()\n",
+    "t2.start()\n",
+    "time.sleep(0.5)  # Simulate slight delay\n",
+    "t3.start()\n",
+    "\n",
+    "t1.join()\n",
+    "t2.join()\n",
+    "t3.join()\n",
+    "\n",
+    "# Final balances (inconsistent results)\n",
+    "df = pd.read_sql_query(\"SELECT * FROM accounts;\", conn)\n",
+    "print(\"Final balances after inconsistent execution:\")\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reset data for correct transaction handling\n",
+    "cursor.execute(\"DELETE FROM accounts;\")\n",
+    "cursor.executemany(\"INSERT INTO accounts (id, name,balance) VALUES (?, ?,?);\", [(1, \"Steve\",100),(3, \"John\",100)])\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Running transactions with locks (expect consistency):\n",
+      "Safe Transaction 2: Initial balance (ID 3): 100\n",
+      "Safe Transaction 1: Initial balance (ID 3): 100\n",
+      "Safe Transaction 2: Updated balance (ID 1): 130\n",
+      "Safe Transaction 1: Updated balance (ID 1): 160\n",
+      "Safe Transaction 1: Final balance (ID 3): 40\n",
+      "Safe Transaction 2: Final balance (ID 3): 40\n",
+      "Safe Transaction 3: Initial balance (ID 1): 160\n",
+      "Safe Transaction 3: Final balance (ID 1): 130\n",
+      "Final balances after correct execution:\n",
+      "   id   name  balance\n",
+      "0   1  Steve      130\n",
+      "1   3   John       40\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def safe_update_balance(account_id, amount):\n",
+    "    \"\"\"Updates balance safely with transactions.\"\"\"\n",
+    "    local_conn = sqlite3.connect(database_path)\n",
+    "    local_conn.execute(\"BEGIN IMMEDIATE;\")  # Lock the table\n",
+    "    local_cursor = local_conn.cursor()\n",
+    "    local_cursor.execute(\"UPDATE accounts SET balance = balance + ? WHERE id = ?;\", (amount, account_id))\n",
+    "    local_conn.commit()\n",
+    "    local_conn.close()\n",
+    "\n",
+    "def safe_transaction_1():\n",
+    "    print(\"Safe Transaction 1: Initial balance (ID 3):\", query_balance(3))\n",
+    "    safe_update_balance(1, 30)\n",
+    "    print(\"Safe Transaction 1: Updated balance (ID 1):\", query_balance(1))\n",
+    "    safe_update_balance(3, -30)\n",
+    "    print(\"Safe Transaction 1: Final balance (ID 3):\", query_balance(3))\n",
+    "\n",
+    "def safe_transaction_2():\n",
+    "    print(\"Safe Transaction 2: Initial balance (ID 3):\", query_balance(3))\n",
+    "    safe_update_balance(1, 30)\n",
+    "    print(\"Safe Transaction 2: Updated balance (ID 1):\", query_balance(1))\n",
+    "    safe_update_balance(3, -30)\n",
+    "    print(\"Safe Transaction 2: Final balance (ID 3):\", query_balance(3))\n",
+    "\n",
+    "def safe_transaction_3():\n",
+    "    print(\"Safe Transaction 3: Initial balance (ID 1):\", query_balance(1))\n",
+    "    safe_update_balance(1, -30)\n",
+    "    print(\"Safe Transaction 3: Final balance (ID 1):\", query_balance(1))\n",
+    "\n",
+    "# Run transactions with locks (consistent results)\n",
+    "print(\"\\nRunning transactions with locks (expect consistency):\")\n",
+    "t1 = threading.Thread(target=safe_transaction_1)\n",
+    "t2 = threading.Thread(target=safe_transaction_2)\n",
+    "t3 = threading.Thread(target=safe_transaction_3)\n",
+    "\n",
+    "t1.start()\n",
+    "t2.start()\n",
+    "time.sleep(0.5)  # Simulate slight delay\n",
+    "t3.start()\n",
+    "\n",
+    "t1.join()\n",
+    "t2.join()\n",
+    "t3.join()\n",
+    "\n",
+    "# Final balances (consistent results)\n",
+    "df = pd.read_sql_query(\"SELECT * FROM accounts;\", conn)\n",
+    "print(\"Final balances after correct execution:\")\n",
+    "print(df)\n",
+    "\n",
+    "conn.close()\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "In a jupyternotebook lets explore the following:\n",
-    "\n",
-    "import sqlite3\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Connect to SQLite database\n",
-    "database_path=\"../Datasets/database/bank.db\"\n",
-    "conn = sqlite3.connect(database_path)\n",
-    "\n",
-    "# Create a cursor object\n",
-    "cursor = conn.cursor()\n",
-    "\n",
-    "\n",
-    "-- Demonstrates race conditions\n",
-    "-- Uses bank.db\n",
-    "\n",
-    "-- Connection 1\n",
-    "SELECT \"balance\" FROM \"accounts\" WHERE \"id\" = 3;\n",
-    "\n",
-    "-- Connection 2\n",
-    "SELECT \"balance\" FROM \"accounts\" WHERE \"id\" = 3;\n",
-    "\n",
-    "-- Connection 1\n",
-    "UPDATE \"accounts\" SET \"balance\" = \"balance\" + 30 WHERE \"id\" = 1;\n",
-    "\n",
-    "-- Connection 2\n",
-    "UPDATE \"accounts\" SET \"balance\" = \"balance\" + 30 WHERE \"id\" = 1;\n",
-    "\n",
-    "-- Connection 3\n",
-    "SELECT \"balance\" FROM \"accounts\" WHERE \"id\" = 1;\n",
-    "UPDATE \"accounts\" SET \"balance\" = \"balance\" - 30 WHERE \"id\" = 1;\n",
-    "\n",
-    "-- Connection 1\n",
-    "UPDATE \"accounts\" SET \"balance\" = \"balance\" - 30 WHERE \"id\" = 3;\n",
-    "\n",
-    "-- Connection 2\n",
-    "UPDATE \"accounts\" SET \"balance\" = \"balance\" - 30 WHERE \"id\" = 3;\n",
-    "\n",
-    "\n",
-    "-- Demonstrates race conditions\n",
-    "-- Uses bank.db\n",
-    "\n",
-    "-- Connection 1\n",
-    "SELECT \"balance\" FROM \"accounts\" WHERE \"id\" = 3;\n",
-    "\n",
-    "-- Connection 2\n",
-    "SELECT \"balance\" FROM \"accounts\" WHERE \"id\" = 3;\n",
-    "\n",
-    "-- Connection 1\n",
-    "UPDATE \"accounts\" SET \"balance\" = \"balance\" + 30 WHERE \"id\" = 1;\n",
-    "\n",
-    "-- Connection 2\n",
-    "UPDATE \"accounts\" SET \"balance\" = \"balance\" + 30 WHERE \"id\" = 1;\n",
-    "\n",
-    "-- Connection 3\n",
-    "SELECT \"balance\" FROM \"accounts\" WHERE \"id\" = 1;\n",
-    "UPDATE \"accounts\" SET \"balance\" = \"balance\" - 30 WHERE \"id\" = 1;\n",
-    "\n",
-    "-- Connection 1\n",
-    "UPDATE \"accounts\" SET \"balance\" = \"balance\" - 30 WHERE \"id\" = 3;\n",
-    "\n",
-    "-- Connection 2\n",
-    "UPDATE \"accounts\" SET \"balance\" = \"balance\" - 30 WHERE \"id\" = 3;\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
